--- a/bonus.html
+++ b/bonus.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>A free cutness calculator</title>
-	<link rel="stylesheet" href="web.css">
+	<link rel="stylesheet" href="bonus.css">
 </head>
 <body>
 <h2 id="firsth">Since we always fight who is the cutest, I decided to make a very reliable, 100% accurate cutness calculator, all you have to do is type a name below and it will calculate how cute they are. Try it! </h2>
